# click_point

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build_dev.sh  dev.sh  test.sh
.github/workflows/: release.yml
src/: install.rs  main.rs
