[package]
name = "click_point"
version = "1.0.4"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
dev = []

[dependencies]
enigo = "0.5.0"
serde_json = "1.0.142"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
windows = { version = "0.61", features = ["Win32_UI_WindowsAndMessaging", "Win32_Foundation"] }
